#7483: Fix not showing

--- a/pages/mandatory/mandatory.css
+++ b/pages/mandatory/mandatory.css
@@ -28,6 +28,7 @@
     padding-right: 20px;
     padding-top: 2px;
     padding-bottom: 2px;
+    word-break: break-all;
 }
 
 
